Add commandline support for custom autofiles e.g. kickstart

--- a/docs/man/man1/heat-jeos.1
+++ b/docs/man/man1/heat-jeos.1
@@ -57,6 +57,11 @@ heat-jeos command\&. This can be either \fBlist\fR or \fBcreate\fR\&.
 path to a custom Oz template FILE
 .RE
 .PP
+\fB\-a\fR, \fB\-\-auto\-file=FILE\fR
+.RS 4
+path to a custom auto file to use (e.g. kickstart or preseed) can be http / https
+.RE
+.PP
 \fB\-s\fR, \fB\-\-iso=FILE\fR
 .RS 4
 override the OS installation media specified in the template with the custom iso
